# Embedded_Linux_Yocto

./: README.md  yocto.md
BeagleBone_AI-64/applications/common/config/: CMakeLists.txt
BeagleBone_AI-64/applications/common/config/include/config/: ConfigManager.h  ConfigSchema.h  ConfigTypes.h
BeagleBone_AI-64/applications/common/config/src/: ConfigManager.cpp  ConfigSchema.cpp
BeagleBone_AI-64/applications/common/ipc/: CMakeLists.txt
BeagleBone_AI-64/applications/common/ipc/include/ipc/: IpcClient.h  IpcManager.h  IpcMessage.h  IpcServer.h
BeagleBone_AI-64/applications/common/ipc/src/: IpcApp.cpp  IpcClient.cpp  IpcManager.cpp  IpcServer.cpp
BeagleBone_AI-64/applications/common/logger/: CMakeLists.txt
BeagleBone_AI-64/applications/common/logger/include/logger/: Application_Logging.txt  Basic-Usage.h  Configuration.txt  ConsoleSink.h  File-Logging.txt  FileSink.h  LogLevel.h  LogSink.h  Logger.h  NetworkSink.h  RotatingFileSink.h  Rotating_File_Logging.txt  SyslogSink.h
BeagleBone_AI-64/applications/common/logger/src/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp  NetworkSink.cpp  RotatingFileSink.cpp  SyslogSink.cpp
BeagleBone_AI-64/applications/common/utils/: Application.txt  CMakeLists.txt
BeagleBone_AI-64/applications/common/utils/include/utils/: CircularBuffer.h  CryptoUtils.h  FileUtils.h  JsonUtils.h  MathUtils.h  NetworkUtils.h  SerialPort.h  SignalHandler.h  StringUtils.h  SystemUtils.h  ThreadPool.h  TimeUtils.h
BeagleBone_AI-64/applications/common/utils/src/: CircularBuffer.cpp  FileUtils.cpp  MathUtils.cpp  NetworkUtils.cpp  StringUtils.cpp  SystemUtils.cpp  ThreadPool.cpp  TimeUtils.cpp
